@@ -2,6 +2,11 @@ hptutil 1.01
 ---------------
 
 ----- cvs ci ------
+Tue Jul 25 22:09:07 NOVST 2000
+max (patch from Pavel Gulchouk):
+* module=hptutil
+
+----- cvs ci ------
 Sat Jun  3 15:35:08 NOVST 2000
 max:
 * nopack support - don't purge & pack
